# ht32f1yyy-hal

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: clocks.rs  gpio.rs  i2c.rs  spi.rs  usb_serial.rs
src/: ckcu.rs  gpio.rs  i2c.rs  lib.rs  spi.rs  time.rs  usb.rs
src/gpio/: afio.rs  ht32f125x.rs  ht32f1653_54.rs  ht32f1655_56.rs  ht32f175x.rs  mod.rs
src/usb/: bus.rs  endpoint_memory.rs  endpoints.rs  mod.rs  registers.rs
