[package]
name = "ht32f1yyy-hal"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware Abstraction Layer implementation for HT32F1yyy series microcontrollers"
keywords = ["arm", "cortex-m", "ht32", "hal", "embedded-hal"]
license = "MIT"
repository = "https://gitlab.com/jspngh/ht32f1yyy-hal"
readme = "README.md"
exclude = [".gitignore"]

[package.metadata.docs.rs]
features = ["critical-section-impl", "rt", "ht32f175x"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
embedded-hal = "=1.0.0-alpha.10"
cortex-m = "0.7"
ht32f1yyy = { path = "../ht32-rs/ht32f1yyy" }
ht32-usbd = { path = "../ht32-usbd" }
nb = "1.1.0"
fugit = "0.3.6"

[dev-dependencies]
cortex-m-rt = "0.7"
critical-section = "1.1.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
embedded-hal-bus = "=0.1.0-alpha.2"

[features]
# TODO: remove these default features
default = ["rt", "critical-section-impl", "ht32f1755"]
rt = ["ht32f1yyy/rt"]
critical-section-impl = ["ht32f1yyy/critical-section", "cortex-m/critical-section-single-core"]

device-selected = []
afio4 = [] # device GPIO pins only have 4 alternate functions available
dppu = [] # device has internal pull-up on USB DP line
ht32f1251 = ["ht32f1yyy/ht32f125x", "device-selected", "afio4"]
ht32f1252 = ["ht32f1yyy/ht32f125x", "device-selected", "afio4"]
ht32f1253 = ["ht32f1yyy/ht32f125x", "device-selected", "afio4"]
ht32f1653 = ["ht32f1yyy/ht32f1653_54", "device-selected", "dppu"]
ht32f1654 = ["ht32f1yyy/ht32f1653_54", "device-selected", "dppu"]
ht32f1655 = ["ht32f1yyy/ht32f1655_56", "device-selected", "dppu"]
ht32f1656 = ["ht32f1yyy/ht32f1655_56", "device-selected", "dppu"]
ht32f1755 = ["ht32f1yyy/ht32f175x", "device-selected", "afio4"]
ht32f1765 = ["ht32f1yyy/ht32f175x", "device-selected", "afio4"]
# TODO: should we add this, even though it is a "HT32F2" device?
# ht32f2755 = ["ht32f1yyy/ht32f175x", "device-selected"]

[profile.dev]
codegen-units = 1
debug = true
opt-level = 2
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git" }
embedded-hal-bus = { git = "https://github.com/rust-embedded/embedded-hal.git" }
